[gd_scene load_steps=6 format=3 uid="uid://b480vu718bgoo"]

[ext_resource type="Script" uid="uid://dmhaf1kwv3kfn" path="res://GameSystem/BuildingUI/SelectableButton/SelectAbleButton.gd" id="1_hfvgr"]
[ext_resource type="Texture2D" uid="uid://870b0hkn4vqx" path="res://Asset/echo_building.png" id="1_xo13f"]

[sub_resource type="AtlasTexture" id="AtlasTexture_vf4sr"]
atlas = ExtResource("1_xo13f")
region = Rect2(0, 0, 16, 16)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hfvgr"]
bg_color = Color(0, 0, 0, 0)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(1, 0.796078, 0.423529, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xo13f"]
bg_color = Color(0.6, 0.6, 0.6, 0.133333)

[node name="SelectableButton" type="Button"]
custom_minimum_size = Vector2(64, 64)
offset_right = 24.0
offset_bottom = 24.0
focus_mode = 0
theme_override_constants/outline_size = 0
icon = SubResource("AtlasTexture_vf4sr")
flat = true
icon_alignment = 1
expand_icon = true
script = ExtResource("1_hfvgr")

[node name="SelectPanel" type="Panel" parent="."]
unique_name_in_owner = true
visible = false
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_hfvgr")

[node name="HoverPanel" type="Panel" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_xo13f")
